@@ -43,11 +43,12 @@
              tal:attributes="name string:${options/name}.search" />
   </div>
 
-  <fieldset class="searchResults"
+  <fieldset class="ubermultiselectwidget searchResults"
             tal:condition="options/results | nothing">
     <legend i18n:translate="label_searchresults">Search results</legend>
     <div tal:repeat="term options/results">
       <input type="checkbox"
+             onChange="saveWarning()"
              tal:attributes="name string:${options/name}:list;
                              value term/token" />
       <input type="submit"
@@ -75,6 +76,18 @@
          i18n:translate="">
       There are more search results, narrow your search.
     </p>
+    <dl class="portalMessage save_reminder">
+        <dd i18n:translate="">Do not forget to save your selection</dd>
+    </dl>
+    <script type="text/javascript">
+    // By calling this method here, the message gets displayed even if no
+    // javascript is active
+    saveWarning();
+    </script>
+  </fieldset>
+  
+  <fieldset class="searchResults" i18n:translate="" tal:condition="not:options/results | nothing">
+    No search results or no search entered
   </fieldset>
 
   <div class="formControls">
